mlops/iac/modules/ingress-nginx/templates/ingress-phoenix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ${phoenix_namespace}-ingress
  namespace: ${phoenix_namespace} # <--- Phải trùng với Phoenix namespace
spec: 
  ingressClassName: nginx
  rules: 
    - host: ${phoenix_host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${phoenix_svc}
                port:
                  number: ${phoenix_port}
